--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -91,10 +91,11 @@
                     />
 
                 <EditText
+                    android:id="@+id/etEmail"
                     android:layout_width="0dp"
                     android:layout_height="48dp"
-                    android:inputType="textPersonName"
-                    android:hint="Username"
+                    android:inputType="textEmailAddress"
+                    android:hint="Email"
                     android:layout_weight="1"
                     android:layout_marginRight="10dp"
                     />
@@ -113,6 +114,7 @@
                     />
 
                 <EditText
+                    android:id="@+id/etPassword"
                     android:layout_width="0dp"
                     android:layout_height="48dp"
                     android:inputType="textPassword"
