--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -99,6 +99,7 @@
                     android:textSize="17dp" />
 
                 <EditText
+                    android:id="@+id/etFirstName"
                     android:layout_width="0dp"
                     android:layout_height="48dp"
                     android:layout_marginRight="10dp"
@@ -121,6 +122,7 @@
                     android:textSize="17dp" />
 
                 <EditText
+                    android:id="@+id/etLastName"
                     android:layout_width="0dp"
                     android:layout_height="48dp"
                     android:layout_marginRight="10dp"
@@ -142,6 +144,7 @@
                     android:textSize="17dp" />
 
                 <EditText
+                    android:id="@+id/etEmail"
                     android:layout_width="0dp"
                     android:layout_height="48dp"
                     android:layout_marginRight="10dp"
@@ -164,6 +167,7 @@
                     android:textSize="17dp" />
 
                 <EditText
+                    android:id="@+id/etPassword"
                     android:layout_width="0dp"
                     android:layout_height="48dp"
                     android:layout_marginRight="10dp"
@@ -187,6 +191,7 @@
                     android:textSize="17dp" />
 
                 <EditText
+                    android:id="@+id/etMobileNum"
                     android:layout_width="0dp"
                     android:layout_height="48dp"
                     android:layout_marginRight="10dp"
