--- a/app/src/main/res/layout/activity_addto_cart.xml
+++ b/app/src/main/res/layout/activity_addto_cart.xml
@@ -58,6 +58,7 @@
         android:layout_marginTop="10dp" />
 
     <Button
+        android:id="@+id/checkoutBTN"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="100dp"
