--- a/app/src/main/res/layout/activity_add_product.xml
+++ b/app/src/main/res/layout/activity_add_product.xml
@@ -69,6 +69,7 @@
                 android:layout_marginTop="10dp"
                 android:textSize="20dp"/>
             <EditText
+                android:id="@+id/etProductName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="ex: apple"/>
@@ -93,10 +94,12 @@
                 android:text="Quantity:"
                 android:textSize="20dp"
                 android:layout_marginTop="10dp"/>
+
             <EditText
+                android:id="@+id/etQuantity"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
+                android:layout_height="wrap_content" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -104,10 +107,12 @@
                 android:textSize="20dp"
                 android:layout_marginTop="10dp"/>
             <EditText
+                android:id="@+id/etPrice"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 />
             <Button
+                android:id="@+id/btnSubmitProduct"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="add product"
