--- a/app/src/main/res/layout/activity_addto_cart.xml
+++ b/app/src/main/res/layout/activity_addto_cart.xml
@@ -10,8 +10,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="71dp"
-        android:background="@color/black"
-        android:orientation="vertical">
+        android:background="@color/black">
 
         <TextView
             android:layout_width="244dp"
@@ -31,10 +30,9 @@
             android:layout_marginTop="5dp"
             android:src="@drawable/refreshbtn"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="Home"
+            android:contentDescription="Refresh"
             android:padding="12dp"
-            android:scaleType="centerInside"
-            />
+            android:scaleType="centerInside" />
 
         <ImageButton
             android:id="@+id/returnbtn"
@@ -44,25 +42,39 @@
             android:layout_marginTop="5dp"
             android:src="@drawable/returnbtn"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="Home"
+            android:contentDescription="Return"
             android:padding="12dp"
-            android:scaleType="centerInside"
-            />
-
+            android:scaleType="centerInside" />
     </RelativeLayout>
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/cartRecyclerView"
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="444dp"
-        android:layout_marginTop="10dp" />
+        android:layout_height="match_parent"
+        android:fillViewport="true">
 
-    <Button
-        android:id="@+id/checkoutBTN"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="100dp"
-        android:layout_marginRight="100dp"
-        android:layout_marginTop="10dp"
-        android:text="Check out"/>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:paddingBottom="20dp">
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/cartRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:nestedScrollingEnabled="false" />
+
+            <Button
+                android:id="@+id/checkoutBTN"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="100dp"
+                android:layout_marginRight="100dp"
+                android:layout_marginTop="20dp"
+                android:text="Check out"/>
+
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
+
 </LinearLayout>
