--- a/app/src/main/res/layout/activity_farmer_dashboard.xml
+++ b/app/src/main/res/layout/activity_farmer_dashboard.xml
@@ -10,207 +10,136 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="wrap_content">
 
         <TextView
-            android:layout_width="250dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
             android:layout_marginTop="10dp"
-            android:gravity="bottom"
             android:text="Dashboard"
-            android:textSize="29dp"
+            android:textSize="29sp"
             android:textStyle="bold" />
 
         <ImageButton
             android:id="@+id/returnbtn"
             android:layout_width="56dp"
             android:layout_height="56dp"
-            android:layout_marginLeft="350dp"
+            android:layout_alignParentEnd="true"
             android:layout_marginTop="5dp"
+            android:layout_marginEnd="10dp"
             android:src="@drawable/returnbtn"
             android:background="?attr/selectableItemBackgroundBorderless"
-            android:contentDescription="Home"
+            android:contentDescription="Return"
             android:padding="12dp"
-            android:scaleType="centerInside"
-            />
+            android:scaleType="centerInside" />
     </RelativeLayout>
 
-    <androidx.cardview.widget.CardView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
-        android:layout_height="200dp"
-        app:cardCornerRadius="10dp"
-        android:elevation="15dp"
-        android:layout_margin="15dp">
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:fillViewport="true">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
+            <androidx.cardview.widget.CardView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:text="List of sales"
-                android:textSize="20dp" />
+                app:cardCornerRadius="10dp"
+                android:elevation="8dp"
+                android:layout_margin="15dp">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="15"
-                android:textSize="30dp"
-                android:layout_marginLeft="20dp"/>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="15dp"
+                    android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Successful Sales"
-                android:textSize="20dp"
-                android:layout_margin="10dp"/>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="List of sales"
+                        android:textSize="20sp" />
 
-            <TextView
-                android:layout_width="wrap_content"
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="15"
+                        android:textSize="30sp"
+                        android:textStyle="bold"
+                        android:layout_marginLeft="10dp"/>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="10dp"
+                        android:text="Successful Sales"
+                        android:textSize="20sp" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="5"
+                        android:textSize="30sp"
+                        android:textStyle="bold"
+                        android:layout_marginLeft="10dp"/>
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="5"
-                android:textSize="30dp"
-                android:layout_marginLeft="20dp"/>
+                android:padding="5dp"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:layout_gravity="center"
+                    android:layout_margin="15dp"
+                    android:text="sell product"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+
+                <Button
+                    android:id="@+id/btnClickHere"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_margin="15dp"
+                    android:text="click here" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:background="@color/black"
+                android:gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="SUCCESSFUL ORDERS"
+                    android:textColor="@color/white"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/ordersRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:nestedScrollingEnabled="false"
+                android:paddingBottom="20dp" />
 
         </LinearLayout>
-
-    </androidx.cardview.widget.CardView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="204dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="15dp"
-            android:text="sell product"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-
-        <Button
-            android:id="@+id/btnClickHere"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_margin="15dp"
-            android:text="click here" />
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="71dp"
-        android:background="@color/black"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="244dp"
-            android:layout_height="39dp"
-            android:layout_marginTop="12dp"
-            android:gravity="center"
-            android:text="SUCCESFUL ORDERS"
-            android:textColor="@color/white"
-            android:textSize="20dp"
-            android:textStyle="bold" />
-
-
-    </LinearLayout>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_weight="1"/>
-
-    <TableLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:stretchColumns="*"
-        android:background="#FFFFFF">
-
-        <!-- Header Row -->
-        <TableRow
-            android:padding="8dp"
-            >
-
-            <TableRow
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center">
-
-                <ImageButton
-                    android:id="@+id/nav_home"
-                    android:layout_width="56dp"
-                    android:layout_height="56dp"
-                    android:src="@drawable/homebtn"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:contentDescription="Home"
-                    android:padding="12dp"
-                    android:scaleType="centerInside"
-                    />
-            </TableRow>
-            <TableRow
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center">
-
-                <ImageButton
-                    android:id="@+id/nav_notification"
-                    android:layout_width="56dp"
-                    android:layout_height="56dp"
-                    android:src="@drawable/actbutton"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:contentDescription="Notifications"
-                    android:padding="12dp"
-                    android:scaleType="centerInside"
-                    />
-            </TableRow>
-            <TableRow
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center">
-
-                <ImageButton
-                    android:id="@+id/nav_cart"
-                    android:layout_width="56dp"
-                    android:layout_height="56dp"
-                    android:src="@drawable/cartbutton"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:contentDescription="Cart"
-                    android:padding="12dp"
-                    android:scaleType="centerInside"
-                    />
-            </TableRow>
-            <TableRow
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="center">
-
-                <ImageButton
-                    android:id="@+id/nav_settings"
-                    android:layout_width="56dp"
-                    android:layout_height="56dp"
-                    android:src="@drawable/settingsbtn"
-                    android:background="?attr/selectableItemBackgroundBorderless"
-                    android:contentDescription="Settings"
-                    android:padding="12dp"
-                    android:scaleType="centerInside"
-                    />
-            </TableRow>
-
-        </TableRow>
-    </TableLayout>
-
+    </androidx.core.widget.NestedScrollView>
 
 
 </LinearLayout>
