--- a/app/src/main/res/layout/activity_rate_product.xml
+++ b/app/src/main/res/layout/activity_rate_product.xml
@@ -46,9 +46,11 @@
             android:layout_marginBottom="8dp">
 
             <EditText
+                android:id="@+id/etRating"
                 android:layout_width="318dp"
                 android:layout_height="wrap_content"
-                android:hint="1-5 "/>
+                android:hint="1-5"
+                android:inputType="number"/>
         </LinearLayout>
 
 
