--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -23,7 +23,7 @@
             android:layout_marginLeft="10dp" />
 
         <ImageButton
-            android:id="@+id/returnbtn"
+            android:id="@+id/refreshbtn"
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:layout_alignParentEnd="true"
