--- a/app/src/main/res/layout/item_inventory.xml
+++ b/app/src/main/res/layout/item_inventory.xml
@@ -13,7 +13,7 @@
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/emptyimage" />
+        android:src="@drawable/fruits" />
     <!-- WAKAS NG PAGBABAGO -->
 
     <LinearLayout
