--- a/app/src/main/res/layout/item_orderhistory.xml
+++ b/app/src/main/res/layout/item_orderhistory.xml
@@ -13,17 +13,17 @@
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/emptyimage" />
+        android:src="@drawable/fruits"
+        android:visibility="gone"/>
     <!-- WAKAS NG PAGBABAGO -->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_toEndOf="@id/product_image"
+        android:layout_marginStart="10dp"
         android:layout_toStartOf="@id/add_to_cart_button"
-        android:layout_centerVertical="true"
-        android:layout_marginStart="16dp">
+        android:layout_toEndOf="@id/product_image"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/product_name"
@@ -32,11 +32,13 @@
             android:text="Product Name"
             android:textSize="18sp"
             android:textStyle="bold" />
+
         <TextView
             android:id="@+id/addresstext"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Address" />
+
         <TextView
             android:id="@+id/product_quantity"
             android:layout_width="wrap_content"
@@ -46,7 +48,9 @@
             android:id="@+id/product_price"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Price" />
+            android:text="Price"
+            />
+
     </LinearLayout>
 
     <Button
