--- a/app/src/main/res/layout/item_shoppinglist.xml
+++ b/app/src/main/res/layout/item_shoppinglist.xml
@@ -52,6 +52,18 @@
             android:textStyle="bold" />
     </LinearLayout>
 
+    <Button
+        android:id="@+id/btnEdit"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="10dp"
+        android:background="@color/white"
+        android:text="Edit"
+        android:textColor="#0000FF" />
+
+
     <TextView
         android:id="@+id/btnDelete"
         android:layout_width="wrap_content"
