--- a/app/src/main/res/layout/item_successful_orders.xml
+++ b/app/src/main/res/layout/item_successful_orders.xml
@@ -13,7 +13,8 @@
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/emptyimage" />
+        android:src="@drawable/fruits"
+        android:visibility="gone"/>
     <!-- WAKAS NG PAGBABAGO -->
 
     <LinearLayout
